Updating regex to support changes in Image Builder 8.5.

--- a/ansible/roles/oci-build-auto-iso/tasks/main.yaml
+++ b/ansible/roles/oci-build-auto-iso/tasks/main.yaml
@@ -47,7 +47,7 @@
     depth: 0
     paths: "{{ iso_directory }}"
     patterns:
-      - "{{ build_commit_id }}-.*-boot.iso"
+      - "{{ build_commit_id }}-installer.iso"
     use_regex: yes
   register: find_results
   failed_when:
