--- a/charts/rfe-pipelines/values.yaml
+++ b/charts/rfe-pipelines/values.yaml
@@ -8,3 +8,15 @@ commonCR:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/compare-options: IgnoreExtraneous
+
+pipelines:
+  repos:
+    tooling:
+      repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
+      targetRevision: main
+    blueprints:
+      repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
+      targetRevision: blueprints
+    kickstarts:
+      repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
+      targetRevision: kickstarts
