--- a/helm/testing/examples/pipeline-custom-default-tooling-repos.yaml
+++ b/helm/testing/examples/pipeline-custom-default-tooling-repos.yaml
@@ -13,7 +13,7 @@ application-manager:
                 # RFE Pipelines
                 rfe-pipelines:
                   values:
-                    piplines:
+                    pipelines:
                       # Change default repository URL/branch here
                       repos:
                         tooling:
