Checking file vs path to avoid new 403 behavior.

--- a/ansible/roles/oci-publish-content/tasks/main.yaml
+++ b/ansible/roles/oci-publish-content/tasks/main.yaml
@@ -20,7 +20,7 @@
 
 - name: Wait for Stage Deployment
   ansible.builtin.uri:
-    url: "http://{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd.rfe.svc.cluster.local/repo"
+    url: "http://{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd.rfe.svc.cluster.local/repo/config"
   delay: 10
   retries: 60
 
