Adding immediate parameter to firewalld task.

--- a/ansible/roles/image-builder/tasks/main.yaml
+++ b/ansible/roles/image-builder/tasks/main.yaml
@@ -39,8 +39,9 @@
     
 - name: Enable Firewall Ports for Cockpit/Composer/Apache
   ansible.posix.firewalld:
-    service: "{{ item }}"
     permanent: yes
+    immediate: yes
+    service: "{{ item }}"
     state: enabled
   loop:
     - cockpit
