Added types to all pipeline parameters

--- a/charts/rfe-pipelines/templates/rfe-oci-publish-content-pipeline.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-publish-content-pipeline.yaml
@@ -19,8 +19,10 @@ spec:
       type: string
     - name: image-path
       description: Path to RFE Container Image
+      type: string
     - name: image-tag
       description: Tag Associated with the RFE Image to Deploy
+      type: string
   results:
     - name: content-path
       description: URL to OSTree Content
