Pipeline Enhancements and Changes for Image Builder 8.5 (#198)
* Updating regex to support changes in Image Builder 8.5.

* Moving parameters after copy command.

* Updating Service/Route to reflect move from port 80->8080.

* Adding support for custom default tooling repositories.

* s/piplines/pipelines

* s/targetRevsion/targetRevision

* Checking file vs path to avoid new 403 behavior.

* Adding immediate parameter to firewalld task.

* Updating Content-Type header to reflect type application/x-iso9660-image.

* Fixing improper use of remote_src parameter in uri task.

--- a/ansible/roles/nexus-upload/tasks/main.yaml
+++ b/ansible/roles/nexus-upload/tasks/main.yaml
@@ -48,10 +48,11 @@
   ansible.builtin.uri:
     force_basic_auth: yes
     headers:
-      Content-Type: application/octet-stream
+      Content-Type: application/x-iso9660-image
     method: PUT
     password: "{{ nexus_password }}"
-    remote_src: "{{ file_to_upload }}"
+    remote_src: yes
+    src: "{{ file_to_upload }}"
     status_code:
       - 201
     url: "{{ nexus_http_scheme }}://{{ nexus_service_name }}:{{ nexus_service_port }}/{{ nexus_destination_path }}"
