Documentation Updates for Helm Migration (#206)
* Update for new deployment model.

* Adding additional deployment docs.

* Adding deployment examples.

* Dropping helm/testing directory.

* Adding Red Hat

Co-authored-by: Andrew Block <andy.block@gmail.com>

* Expanding ODF

Co-authored-by: Andrew Block <andy.block@gmail.com>

* Apply suggestions from code review

Co-authored-by: Andrew Block <andy.block@gmail.com>

* Updating examples/values/local.

* Applying suggestions from PR.

* Adding deployment verification.

* Organize examples.

* nested -> a nested

Co-authored-by: Andrew Block <andy.block@gmail.com>

--- a/examples/values/deployment/cnv-processor-emulation.yaml
+++ b/examples/values/deployment/cnv-processor-emulation.yaml
@@ -10,10 +10,9 @@ application-manager:
           cluster-configs:
             values:
               charts:
-                # OpenShift Data Foundations
+                # OpenShift Virtualization
                 cnv:
                   values:
                     cnv:
                       debug:
                         useEmulation: "true"
-
