Adds the ODF operator as disabled component

--- a/examples/values/deployment/disable-odf.yaml
+++ b/examples/values/deployment/disable-odf.yaml
@@ -13,3 +13,10 @@ application-manager:
                 # OpenShift Data Foundations
                 odf:
                   disabled: true
+ 
+                 # Operators App of App Chart
+                operators:
+                  values:
+                    charts:
+                      odf-operator:
+                        disabled: true
