Set activeDeadlineSeconds in job spec for image builder job

--- a/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
@@ -9,6 +9,7 @@ metadata:
   name: image-builder-vm-ansible-job
   namespace: rfe
 spec:
+  activeDeadlineSeconds: {{ $.Values.ansibleVM.activeDeadlineSeconds }}
   template:
     spec:
       activeDeadlineSeconds: {{ $.Values.ansibleVM.activeDeadlineSeconds }}
