--- a/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
@@ -42,6 +42,9 @@ spec:
             - name: redhat-portal-credentials
               mountPath: /var/secrets/redhat-portal-credentials
               readOnly: true
+            - name: composer-config
+              mountPath: /var/configs/composer
+              readOnly: true
           imagePullPolicy: Always
           name: ansible-rfe-runner
       volumes:
@@ -53,6 +56,9 @@ spec:
           secret:
             secretName: redhat-portal-credentials
             defaultMode: 0400
+        - name: composer-config
+          configMap:
+            name: image-builder-vm-composer
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
       serviceAccount: rfe-automation
