--- a/ct.yaml
+++ b/ct.yaml
@@ -2,5 +2,5 @@ chart-dirs:
   - charts
 validate-maintainers: false
 remote: origin
-target-branch: helm-migration
+target-branch: main
 check-version-increment: false
