ArgoCD and Tekton enhancements

--- a/charts/argocd/templates/argocd.yaml
+++ b/charts/argocd/templates/argocd.yaml
@@ -138,3 +138,8 @@ spec:
         hs.status = "Progressing"
         hs.message = "Waiting for Build to complete"
         return hs
+  resourceExclusions: |
+    - apiGroups:
+      - tekton.dev
+      kinds:
+      - PipelineRun
