Added package eula for microshift

--- a/microshift/blueprint.toml
+++ b/microshift/blueprint.toml
@@ -8,6 +8,10 @@ groups = []
 # Force correct redhat-release
 
 [[packages]]
+name = "redhat-release-eula"
+version = "*"
+
+[[packages]]
 name = "redhat-release"
 version = "*"
 
