--- a/ansible/roles/image-builder/defaults/main.yml
+++ b/ansible/roles/image-builder/defaults/main.yml
@@ -1,3 +1,5 @@
 ---
 composer_sources_path: /var/configs/composer/sources.yaml
 composer_sources_tmp_dir: /tmp/composer-sources
+ingress_controller_name: default
+ingress_controller_namespace: openshift-ingress-operator
