Adding IngressController permissions to rfe-automation SA.

--- a/charts/rbac/templates/rfe-automation-role.yaml
+++ b/charts/rbac/templates/rfe-automation-role.yaml
@@ -61,3 +61,10 @@ rules:
       - list
       - update
       - get
+  - apiGroups:
+      - operator.openshift.io
+    resources:
+      - ingresscontrollers
+    verbs:
+      - get
+      - list
