--- a/ansible/collections/requirements.yaml
+++ b/ansible/collections/requirements.yaml
@@ -1,7 +1,10 @@
 collections:
-  - name: community.general
-    source: https://galaxy.ansible.com
   - name: ansible.posix
+    source: https://galaxy.ansible.com
+  - name: community.crypto
+    source: https://galaxy.ansible.com
+    version: "2.1.0"
+  - name: community.general
     source: https://galaxy.ansible.com
   - name: community.kubernetes
     source: https://galaxy.ansible.com
