Allow the user to skip the minimal space protection of ostree
Add a Pipeline parameter called skip-free-space-protection with default False
Pass the parameter from the Pipeline to the Playbook through the Task
In the Playbook, if set, add "min-free-space-percent=0" to the repo's config file

--- a/ansible/roles/oci-publish-content/tasks/main.yaml
+++ b/ansible/roles/oci-publish-content/tasks/main.yaml
@@ -37,6 +37,14 @@
       - "init"
       - "--mode=archive"
 
+- name: Set free space percentage to 0
+  ansible.builtin.lineinfile:
+    path: "{{ repo_remote_path }}/config"
+    insertafter: "[core]"
+    firstmatch: yes
+    line: "min-free-space-percent=0"
+  when: skip_free_space_protection | default(false) | bool
+
 - name: Add Remote OSTree Repository
   ansible.builtin.command:
     argv:
