--- a/charts/rfe-pipelines/templates/rfe-oci-publish-content-pipeline.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-publish-content-pipeline.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
   annotations:
-    {{- toYaml .Values.commonCR.annotations | nindent 4 }}    
+    {{- toYaml .Values.commonCR.annotations | nindent 4 }}
   name: rfe-oci-publish-content-pipeline
 spec:
   params:
@@ -22,6 +22,10 @@ spec:
       type: string
     - name: image-tag
       description: Tag Associated with the RFE Image to Deploy
+      type: string
+    - name: skip-free-space-protection
+      description: Instruct OSTree to skip its free space protection
+      default: "False"
       type: string
   results:
     - name: content-path
@@ -53,6 +57,8 @@ spec:
           value: $(params.image-path)
         - name: image-tag
           value: $(params.image-tag)
+        - name: skip-free-space-protection
+          value: $(params.skip-free-space-protection)
       runAfter:
         - "git-clone-tooling"
       workspaces:
