--- a/charts/odf/templates/patch-operator-noobaa-clusterrolebinding.yaml
+++ b/charts/odf/templates/patch-operator-noobaa-clusterrolebinding.yaml
@@ -1,15 +1,15 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   labels:
     {{- include "common.labels.labels" . | nindent 4 }}
-  name: resource-locker-noobaa-rolebinding
+  name: patch-operator-noobaa-rolebinding
   namespace: {{ template "common.names.namespace" $ }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: resource-locker-noobaa-role
+  kind: ClusterRole
+  name: patch-operator-noobaa
 subjects:
   - kind: ServiceAccount
-    name: resource-locker-noobaa-sa
+    name: patch-operator-noobaa-sa
     namespace: openshift-storage
