--- a/charts/rbac/templates/rfe-automation-ingresscontroller-rolebinding.yaml
+++ b/charts/rbac/templates/rfe-automation-ingresscontroller-rolebinding.yaml
@@ -12,4 +12,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: rfe-automation
-    namespace: rfe
+    namespace: {{ template "common.names.namespace" $ }}
