Migration to ODF catalog

--- a/charts/bootstrap/values.yaml
+++ b/charts/bootstrap/values.yaml
@@ -149,7 +149,7 @@ application-manager:
                           operator:
                             channel: stable-4.9
                             installPlanApproval: Automatic
-                            name: ocs-operator
+                            name: odf-operator
                             source: redhat-operators
                             sourceNamespace: openshift-marketplace
                       nexus-operator:
